# micro-vm

./: .gitignore  CMakeLists.txt  file_list.txt
docs/: classes.dia  decryptor.md  micro_vm.md
src/: decryptor.cpp  main.cpp
src/microvm/: abstract_vm.cpp  abstract_vm.h  micro_vm.cpp  micro_vm.h  opcode.cpp  opcode.h  opcode_impl.cpp  opcode_impl.h
